<resources>
    <string name="app_name">TryCapstone</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="predict_app">Aplikasi Prediksi Harga Cabai</string>
    <string name="title_login_page">Silahkan masukkan data diri Anda</string>
    <string name="title_signup_page">Complete your personal data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile_email">Email</string>
    <string name="logout">Logout</string>
    <string name="goHome">Home</string>
    <string name="email_not_valid">Input must be email</string>
    <string name="password_warning"> Password cannot be less than 8 characters</string>
    <string name="must_8_character">Password cannot be less than 8 characters</string>
    <string name="input_name">Enter your username</string>
    <string name="name_warning">Name cannot be empty</string>
    <string name="have_account">Sudah punya akun? Login</string>
    <string name="btn_register">Belum punya akun? Register</string>
    <string name="description">Description</string>
    <string name="image_photo">Image Photo</string>
    <string name="button_add">Button Add</string>
    <string name="camera">Camera</string>
    <string name="image_preview">Image Preview</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="email_input">Enter your email</string>
    <string name="password_input">Enter your password</string>
    <string name="failed_register">Failed to create account</string>
    <string name="change_language">Change language</string>
    <string name="logo">Logo</string>
    <string name="switch_camera">Switch camera</string>
    <string name="input_description">Enter a description first</string>
    <string name="upload_image">Please enter the image file first</string>
    <string name="beranda">Home</string>
    <string name="profile">Profile</string>
    <string name="graph">Graph</string>
    <string name="welcome">Selamat datang di RICH!</string>
    <string name="news">HOT News</string>
    <string name="user">User</string>
    <string name="profile_name">Name</string>
    <string name="icon_alternate">Icon Alternate Email</string>
    <string name="profile_person">Icon Person</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="date">Mei 2023</string>
    <string name="stats_predict">Prediksi komoditas harga cabai</string>
    <string name="province">Provinsi</string>
    <string name="home">Home</string>
    <string name="bar">Bar</string>
    <string name="scanHealth">Scan Kesehatan Cabai</string>
</resources>