<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/baseline_arrow_back_24"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.026" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/user"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle"
            android:contentDescription="@string/logo"
            android:src="@drawable/chili"
            app:civ_border_color="@color/CarrotOrange"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.966"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_users"
            android:layout_width="142dp"
            android:layout_height="148dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal1"
            app:layout_constraintVertical_bias="0.176"
            android:background="@drawable/baseline_person_pin_24"
             />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/camera"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/baseline_camera_alt_24"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.658"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal1"
            app:layout_constraintVertical_bias="0.351" />

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:drawableEnd="@drawable/baseline_edit_24"
            android:hint="@string/profile_name"
            android:textColorHint="@color/DarkPastelGreen"
            android:backgroundTint="@color/DarkPastelGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/camera" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_person_24"
            app:layout_constraintBottom_toBottomOf="@+id/profile_name"
            app:layout_constraintEnd_toStartOf="@+id/profile_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_name"
            android:contentDescription="@string/profile_person" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:drawableEnd="@drawable/baseline_edit_24"
            android:hint="@string/profile_email"
            android:textColorHint="@color/DarkPastelGreen"
            android:backgroundTint="@color/DarkPastelGreen"
            app:layout_constraintEnd_toEndOf="@+id/profile_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/profile_name"
            app:layout_constraintTop_toTopOf="@+id/profile_name" />

        <ImageView
            android:id="@+id/alternate_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_alternate_email_24"
            app:layout_constraintBottom_toBottomOf="@+id/editText"
            app:layout_constraintEnd_toStartOf="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editText"
            android:contentDescription="@string/icon_alternate" />

        <TextView
            android:id="@+id/btn_logout"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/logout"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/alternate_email"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintVertical_bias="1.0"
            app:drawableStartCompat="@drawable/baseline_logout_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.47"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal1"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.1"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>